<resources>
    <string name="app_name">File Recover</string>
    <string name="photo">PHOTOs</string>
    <string name="scan_stopped">Scan stopped</string>
    <string name="audio">AUDIOs</string>
    <string name="video">VIDEOs</string>
    <string name="document">DOCUMENTs</string>
    <string name="zip">ZIP</string>
    <string name="recycle_bin">RECYCLE BIN</string>
    <string name="nameapp">FILE RECOVER</string>
    <string name="hintsearch">Search files pdf/excel/doc/ppt/...</string>
    <string name="file_vault">FILE VAULT</string>
    <string name="protectimprotant"><![CDATA[>>> Protect important files and privacy]]></string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="share">Share to friend</string>
    <string name="privacy">Privacy policy</string>
    <string name="terms_of_sevice">Terms of Sevice</string>
    <string name="rating_us">Rating Us</string>
    <string name="input_search_word">Input search word</string>
    <string name="search_files_deeply">Search Files Deeply</string>
    <string name="desSearch_Files_Deeply">Search for all kinds of documents and files containing keywords, whether they are stored in the recycle bin or hidden</string>
    <string name="search_history">Search History</string>

    <string name="sureexit">Are you sure to quit this app?</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>
    <string name="scanning">Scanning...</string>
    <string name="photoscan">PHOTOs SCAN</string>
    <string name="audioscan">AUDIOs SCAN</string>
    <string name="videoscan">VIDEOs SCAN</string>
    <string name="documentscan">DOCUMENTs SCAN</string>
    <string name="zipscan">ZIP SCAN</string>
    <string name="recyclebinscan">RECYCLE BIN SCAN</string>
    <string name="gotosetting">Go to setting</string>
    <string name="pleasepermission">Please give permission to the app.</string>

    <string name="file">files</string>
    <string name="loadfinish">Load finish</string>

    <string name="desfilevault">The files are placed in the local private space, other apps and people can see it</string>
    <string name="FILE">FILE</string>
    <string name="details">Details</string>
    <string name="file_type">File type:</string>
    <string name="file_creatd">File creatd:</string>
    <string name="file_size">File size:</string>
    <string name="file_path">File path:</string>
    <string name="recover">RECOVER</string>
    <string name="image_has_just_saved">Image has just saved!</string>
    <string name="stop">Stop</string>
    <string name="open">Open</string>
    <string name="document_filter">Document filter</string>
    <string name="desdialogfilter">This operation will restart the scan when the scan is not over.</string>
    <string name="_6_12_months">6-12 months</string>
    <string name="_1_2_years">1-2 years</string>
    <string name="pleaseselect">Please select picture recover!</string>
    <string name="video_has_just_saved">Video has just saved!</string>
    <string name="videos_has_faild">Video has failed for saving!</string>

    <string name="file_has_just_saved">File has just saved!</string>
    <string name="file_has_faild">File has failed for saving!</string>

    <string name="MoveinVault">Move In Vault</string>
    <string name="move_file_success">Move file success!</string>
    <string name="DesInstall">Safely clean up photos and large files</string>
    <string name="install">Install ></string>
    <string name="move_out_vault">Move Out Vault</string>
    <string name="MoveOutSucess">Move Out Vault Success</string>
    <string name="MoveOutError">Move Out Vault Error</string>
    <string name="nofile_onthe_drive">There are no files on the device</string>
    <string name="nofilehide">No hidden files</string>
    <string name="clear">Clear</string>

    <string name="title_delete_allhistory_search">Are you sure you want to clear all history</string>
    <string name="verify">Verify OTP</string>
    <string name="youtotp">Your OTP Here...</string>
    <string name="setotp">Set OTP</string>
    <string name="sure_otp">Are you sure set the otp to</string>
    <string name="history">History</string>
    <string name="confirmotp">Confirm OPT</string>
    <string name="otpnotmatch">OTP not match</string>
    <string name="scan">Scan</string>
    <string name="ago">ago</string>
    <string name="filter">Filter</string>
    <string name="sort_by">Sort by</string>
    <string name="sort_by_size">Sort by size</string>
    <string name="ascending">Ascending</string>
    <string name="decrease">Decrease</string>
    <string name="oldtonew">Old to new</string>
    <string name="newtoold">New to old</string>
    <string name="setting">Settings</string>
    <string name="choose">Choose your language</string>
    <string name="next">Next</string>


    <string name="photovault">PHOTO Vault</string>
    <string name="nophoto">No photos have been selected yet</string>
    <string name="no_files_found">No files found</string>
    <string name="file_recovery">FILE RECOVERY</string>
    <string name="file_cleanup_expert">File Cleanup Expert</string>
    <string name="_6_months">6 months</string>
    <string name="_2_years">2+ years</string>
    <string name="picturehide">Picture Hide</string>
    <string name="videohide">Video Hide</string>
    <string name="audiohide">Audio Hide</string>
    <string name="filehide">File Hide</string>
    <string name="filesize">File Size:</string>
    <string name="date">Date:</string>
    <string name="add_to">Add to</string>
    <string name="photo_vault">PHOTO Vault</string>
    <string name="videovault">VIDEO Vault</string>
    <string name="audiovault">AUDIO Vault</string>
    <string name="filevault2">FILE Vault</string>
    <string name="file_name">File name:</string>
    <string name="app_by_us">App by us</string>
    <string name="continue.">Continue</string>
    <string name="feedback">Feedback</string>
    <string name="pleaseentercode">Please enter enough pin code</string>
    <string name="nohistory">No history</string>
    <string name="otpincorrect">OTP incorrect</string>
    <string name="minute">minute</string>
    <string name="hour">hour</string>
    <string name="day">day</string>

    <string name="information">Information</string>
    <string name="memory">Memory:</string>
    <string name="file1">File:</string>
    <string name="saveimportant">Save important files</string>
    <string name="recentfiles">Recent Files</string>
    <string name="desrecent">History in 3 months</string>
    <string name="hide">HIDE</string>
    <string name="pleasewait">Please Wait</string>
    <string name="notscan">Not scanned yet</string>
    <string name="nofilesarehide">No files are hidde</string>

    <string name="applovin_int" translatable="false">c2432ee165f34835</string>
    <string name="applovin_ba" translatable="false">77e823ab4849380a</string>
    <string name="applovin_native" translatable="false">c22b3539563cc4fa</string>
    <string name="applovin_aoa" translatable="false">4d02ee723031c83d</string>
    <string name="applovin_rw" translatable="false">aea7c1b6d1370536</string>

    <string name="BANNER_ID" translatable="false">ca-app-pub-6294929445985959/7394136608</string>
    <string name="Native_ID" translatable="false">ca-app-pub-6294929445985959/7342451126</string>
    <string name="App_open_ads" translatable="false">ca-app-pub-6294929445985959/8515646582</string>
    <string name="interstitial_ad_unit_id" translatable="false">ca-app-pub-6294929445985959/9844491384</string>
</resources>