<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/shape_bgr_dialog_filter">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/document_filter"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_cancel"
                android:layout_alignParentRight="true"
                android:padding="10dp"
                android:id="@+id/cancel_button"/>

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desdialogfilter"
            android:textColor="@color/blue017"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/poppins_regular"
            android:textSize="15sp"
            android:gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:padding="3dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_6_months"
                android:background="@drawable/shape_button_fillter_dialog"
                android:layout_marginLeft="20dp"
                android:textColor="@color/blue017"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/poppins_regular"
                android:id="@+id/month6"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_6_12_months"
                android:layout_marginLeft="10dp"
                android:textColor="@color/blue017"
                android:fontFamily="@font/poppins_regular"
                android:background="@drawable/shape_button_fillter_dialog"
                android:layout_marginRight="20dp"
                android:id="@+id/month12"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginTop="10dp"
            android:padding="3dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_1_2_years"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/blue017"
                android:background="@drawable/shape_button_fillter_dialog"
                android:layout_marginRight="10dp"
                android:id="@+id/years1"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_2_years"
                android:textColor="@color/blue017"
                android:fontFamily="@font/poppins_regular"
                android:background="@drawable/shape_button_fillter_dialog"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:id="@+id/years2"/>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="15dp"
            app:cardCornerRadius="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:id="@+id/bt_ok"
                android:textColor="@color/white"
                android:background="@color/blue017"
                android:gravity="center"
                android:fontFamily="@font/poppins_bold"
                android:padding="10dp"/>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>