<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/grey01">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/information"
                android:gravity="center"
                android:textColor="@color/white"
                android:padding="5dp"
                android:fontFamily="@font/poppins_medium"
                android:textSize="16sp"
                android:id="@+id/information"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/file1"
                    android:fontFamily="@font/poppins_regular"
                    android:id="@+id/txt_number"
                    android:textColor="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/memory"
                    android:id="@+id/txt_memory"
                    android:textColor="@color/white"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    app:cardCornerRadius="10dp">

                    <Button
                        android:layout_width="100dp"
                        android:layout_height="30dp"
                        android:text="@string/ok"
                        android:fontFamily="@font/poppins_medium"
                        android:textColor="@color/white"
                        android:background="@drawable/shape_radius_bottom"
                        android:id="@+id/bt_ok"/>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>