<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.DetailsVaultActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_left"
            android:padding="10dp"
            android:id="@+id/img_back"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/FILE"
            android:textSize="20sp"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginLeft="10dp"
            android:id="@+id/txt_name"
            android:layout_marginRight="10dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/grey01"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/move_out_vault"
            android:background="@drawable/shape_bgr_bt_movedetails"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:fontFamily="@font/poppins_bold"
            android:id="@+id/bt_move_out"
            android:layout_marginBottom="10dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/open"
            android:background="@drawable/shape_bgr_bt_movedetails"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_above="@+id/bt_move_out"
            android:id="@+id/bt_open"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="130dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:src="@drawable/ic_load"
                android:id="@+id/img_file"/>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>